--- a/src/app/letter-detail/letter-detail.component.css
+++ b/src/app/letter-detail/letter-detail.component.css
@@ -18,3 +18,13 @@
   max-width: 66.66%;
   padding: 0 15px;
 }
+
+h1 {
+    font-family: Roboto, serif;
+    font-size: 2.5em;
+    font-weight: 400;
+    line-height: 1.1em;
+    color: #444;
+    padding: 0 0 .1em;
+    margin: 1rem;
+}
